Code Snippet_Organised - Resubmission-01-2025/CloudFormation/my-cluster-working.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "EKS cluster - my Cluster",
    "Mappings": {
      "ServicePrincipalPartitionMap": {
        "aws": {
          "EC2": "ec2.amazonaws.com",
          "EKS": "eks.amazonaws.com",
          "EKSFargatePods": "eks-fargate-pods.amazonaws.com"
        },
        "aws-cn": {
          "EC2": "ec2.amazonaws.com.cn",
          "EKS": "eks.amazonaws.com",
          "EKSFargatePods": "eks-fargate-pods.amazonaws.com"
        },
        "aws-iso": {
          "EC2": "ec2.c2s.ic.gov",
          "EKS": "eks.amazonaws.com",
          "EKSFargatePods": "eks-fargate-pods.amazonaws.com"
        },
        "aws-iso-b": {
          "EC2": "ec2.sc2s.sgov.gov",
          "EKS": "eks.amazonaws.com",
          "EKSFargatePods": "eks-fargate-pods.amazonaws.com"
        },
        "aws-us-gov": {
          "EC2": "ec2.amazonaws.com",
          "EKS": "eks.amazonaws.com",
          "EKSFargatePods": "eks-fargate-pods.amazonaws.com"
        }
      }
    },
    "Resources": {
      "ClusterSharedNodeSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "Communication between all nodes in the cluster",
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/ClusterSharedNodeSecurityGroup"
              }
            }
          ],
          "VpcId": {
            "Ref": "VPC"
          },
          "SecurityGroupEgress": [
            {
              "IpProtocol": "-1",
              "CidrIp": "0.0.0.0/0"
            }
          ]
        }
      },
      "ControlPlaneSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "Communication between the control plane and worker nodegroups",
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/ControlPlaneSecurityGroup"
              }
            }
          ],
          "VpcId": {
            "Ref": "VPC"
          },
          "SecurityGroupEgress": [
            {
              "IpProtocol": "-1",
              "CidrIp": "0.0.0.0/0"
            }
          ]
        }
      },
      "ControlPlane": {
        "Type": "AWS::EKS::Cluster",
        "Properties": {
          "AccessConfig": {
            "AuthenticationMode": "API_AND_CONFIG_MAP",
            "BootstrapClusterCreatorAdminPermissions": true
          },
          "BootstrapSelfManagedAddons": false,
          "KubernetesNetworkConfig": {
            "IpFamily": "ipv4"
          },
          "Name": "my-cluster",
          "ResourcesVpcConfig": {
            "EndpointPrivateAccess": false,
            "EndpointPublicAccess": true,
            "SecurityGroupIds": [
              {
                "Ref": "ControlPlaneSecurityGroup"
              }
            ],
            "SubnetIds": [
              {
                "Ref": "SubnetPublicUSWEST2B"
              },
              {
                "Ref": "SubnetPublicUSWEST2D"
              },
              {
                "Ref": "SubnetPublicUSWEST2A"
              }
            ]
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "ServiceRole",
              "Arn"
            ]
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/ControlPlane"
              }
            }
          ],
          "Version": "1.30"
        }
      },
      "ServiceRole": {
        "Type": "AWS::IAM::Role",
        "Properties": {
          "AssumeRolePolicyDocument": {
            "Statement": [
              {
                "Action": [
                  "sts:AssumeRole"
                ],
                "Effect": "Allow",
                "Principal": {
                  "Service": [
                    {
                      "Fn::FindInMap": [
                        "ServicePrincipalPartitionMap",
                        {
                          "Ref": "AWS::Partition"
                        },
                        "EKS"
                      ]
                    }
                  ]
                }
              }
            ],
            "Version": "2012-10-17"
          },
          "ManagedPolicyArns": [
            {
              "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSClusterPolicy"
            },
            {
              "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSVPCResourceController"
            },
            {
              "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSServicePolicy"
            }
          ],
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/ServiceRole"
              }
            }
          ]
        }
      },
      "SubnetPublicUSWEST2A": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "us-west-2a",
          "CidrBlock": "192.168.64.0/19",
          "MapPublicIpOnLaunch": true,
          "Tags": [
            {
              "Key": "kubernetes.io/role/elb",
              "Value": "1"
            },
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2A"
              }
            }
          ],
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "SubnetPublicUSWEST2B": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "us-west-2b",
          "CidrBlock": "192.168.0.0/19",
          "MapPublicIpOnLaunch": true,
          "Tags": [
            {
              "Key": "kubernetes.io/role/elb",
              "Value": "1"
            },
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2B"
              }
            }
          ],
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "SubnetPublicUSWEST2D": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "us-west-2d",
          "CidrBlock": "192.168.32.0/19",
          "MapPublicIpOnLaunch": true,
          "Tags": [
            {
              "Key": "kubernetes.io/role/elb",
              "Value": "1"
            },
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/SubnetPublicUSWEST2D"
              }
            }
          ],
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "SubnetPrivateUSWEST2A": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "us-west-2a",
          "CidrBlock": "192.168.128.0/19",
          "MapPublicIpOnLaunch": false,
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2A"
              }
            }
          ],
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "SubnetPrivateUSWEST2B": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "us-west-2b",
          "CidrBlock": "192.168.160.0/19",
          "MapPublicIpOnLaunch": false,
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2B"
              }
            }
          ],
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "SubnetPrivateUSWEST2D": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "AvailabilityZone": "us-west-2d",
          "CidrBlock": "192.168.192.0/19",
          "MapPublicIpOnLaunch": false,
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/SubnetPrivateUSWEST2D"
              }
            }
          ],
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "VPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "192.168.0.0/16",
          "EnableDnsHostnames": true,
          "EnableDnsSupport": true,
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/VPC"
              }
            }
          ]
        }
      },
      "EIP": {
        "Type": "AWS::EC2::EIP",
        "Properties": {
          "Domain": "vpc"
        }
      },
      "NatGateway": {
        "Type": "AWS::EC2::NatGateway",
        "Properties": {
          "SubnetId": {
            "Ref": "SubnetPublicUSWEST2A"
          },
          "AllocationId": {
            "Fn::GetAtt": [
              "EIP",
              "AllocationId"
            ]
          }
        }
      },
      "PrivateRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/PrivateRouteTable"
              }
            }
          ]
        }
      },
      "PrivateRoute": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "PrivateRouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "NatGatewayId": {
            "Ref": "NatGateway"
          }
        }
      },
      "RouteTableAssociationPrivateUSWEST2A": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "SubnetPrivateUSWEST2A"
          },
          "RouteTableId": {
            "Ref": "PrivateRouteTable"
          }
        }
      },
      "RouteTableAssociationPrivateUSWEST2B": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "SubnetPrivateUSWEST2B"
          },
          "RouteTableId": {
            "Ref": "PrivateRouteTable"
          }
        }
      },
      "RouteTableAssociationPrivateUSWEST2D": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "SubnetPrivateUSWEST2D"
          },
          "RouteTableId": {
            "Ref": "PrivateRouteTable"
          }
        }
      },
      "InternetGateway": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/InternetGateway"
              }
            }
          ]
        }
      },
      "VPCGatewayAttachment": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "InternetGatewayId": {
            "Ref": "InternetGateway"
          },
          "VpcId": {
            "Ref": "VPC"
          }
        }
      },
      "PublicRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "VPC"
          },
          "Tags": [
            {
              "Key": "Name",
              "Value": {
                "Fn::Sub": "${AWS::StackName}/PublicRouteTable"
              }
            }
          ]
        }
      },
      "PublicRoute": {
        "Type": "AWS::EC2::Route",
        "Properties": {
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "InternetGateway"
          }
        }
      },
      "RouteTableAssociationPublicUSWEST2A": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "SubnetPublicUSWEST2A"
          },
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          }
        }
      },
      "RouteTableAssociationPublicUSWEST2B": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "SubnetPublicUSWEST2B"
          },
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          }
        }
      },
      "RouteTableAssociationPublicUSWEST2D": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "SubnetPublicUSWEST2D"
          },
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          }
        }
      }
    },
    "Outputs": {
        "ARN": {
            "Value": {
              "Fn::GetAtt": [
                "ControlPlane",
                "Arn"
              ]
            },
            "Export": {
              "Name": {
                "Fn::Sub": "${AWS::StackName}::ARN"
              }
            }
          },
      "CertificateAuthorityData": {
        "Value": {
          "Fn::GetAtt": [
            "ControlPlane",
            "CertificateAuthorityData"
          ]
        }
      },
      "ClusterSecurityGroupId": {
        "Value": {
          "Fn::GetAtt": [
            "ControlPlane",
            "ClusterSecurityGroupId"
          ]
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}::ClusterSecurityGroupId"
          }
        }
      },
      "Endpoint": {
        "Value": {
          "Fn::GetAtt": [
            "ControlPlane",
            "Endpoint"
          ]
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}::Endpoint"
          }
        }
      },
      "ServiceRoleARN": {
        "Value": {
          "Fn::GetAtt": [
            "ServiceRole",
            "Arn"
          ]
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}::ServiceRoleARN"
          }
        }
      },
      "SharedNodeSecurityGroup": {
        "Value": {
          "Ref": "ClusterSharedNodeSecurityGroup"
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}::SharedNodeSecurityGroup"
          }
        }
      },
      "ControlPlaneSecurityGroupID": {
        "Value": {
          "Ref": "ControlPlaneSecurityGroup"
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}::ControlPlaneSecurityGroupID"
          }
        }
      },
      "SubnetsPublic": {
        "Value": {
          "Fn::Join": [
            ",",
            [
              {
                "Ref": "SubnetPublicUSWEST2A"
              },
              {
                "Ref": "SubnetPublicUSWEST2B"
              },
              {
                "Ref": "SubnetPublicUSWEST2D"
              }
            ]
          ]
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}::SubnetsPublic"
          }
        }
      },
      "InternetGatewayId": {
        "Value": {
            "Ref": "InternetGateway"
        },
        "Export": {
            "Name": {
                "Fn::Sub": "${AWS::StackName}::InternetGatewayId"
            }
        }
    },
    "VPCGatewayAttachmentId": {
        "Value": {
            "Ref": "VPCGatewayAttachment"
        },
        "Export": {
            "Name": {
                "Fn::Sub": "${AWS::StackName}::VPCGatewayAttachmentId"
            }
        }
    },
      "SubnetsPrivate": {
        "Value": {
          "Fn::Join": [
            ",",
            [
              {
                "Ref": "SubnetPrivateUSWEST2A"
              },
              {
                "Ref": "SubnetPrivateUSWEST2B"
              },
              {
                "Ref": "SubnetPrivateUSWEST2D"
              }
            ]
          ]
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}::SubnetsPrivate"
          }
        }
      },
      "VPC": {
        "Value": {
          "Ref": "VPC"
        },
        "Export": {
          "Name": {
            "Fn::Sub": "${AWS::StackName}::VPC"
          }
        }
      }
    }
  }
